--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "rss",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "node app.js"
-  },
-  "keywords": [],
-  "author": " <musabadru@gmail.com>",
-  "license": "MIT",
+  "name": "src",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "dependencies": {
-    "express": "^4.18.2",
-    "pug": "^3.0.2",
-    "rss": "^1.2.2"
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^4.4.5"
   }
 }
